@@ -2,10 +2,11 @@
 MOAT test scripts
 John Jacobsen jacobsen@npxdesigns.com
 
-Next release:
+V00-02-08 3/9/10
+0003854: MOAT/stagedtests.pl vulnerable to false alarm if DOR clock ends in the hex digits "bad"
 0002004: sudo make rpm fails
 
-
+============================================================================
 
 
 V00-02-07  11/13/07
